--- a/wot-backend/Dockerfile
+++ b/wot-backend/Dockerfile
@@ -7,4 +7,4 @@ RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
 COPY ./application /code/application
 
-CMD ["uvicorn", "application.server.main:app", "--host", "0.0.0.0", "--port", "8000"]
+ENTRYPOINT ["uvicorn", "application.server.main:app", "--host", "0.0.0.0", "--port", "8000"]
