restyled data-overview

--- a/wot-frontend/angular.json
+++ b/wot-frontend/angular.json
@@ -118,5 +118,10 @@
       }
     }
   },
+  "schematics": {
+    "@schematics/angular:component": {
+      "style": "scss"
+    }
+  },
   "defaultProject": "wot-frontend"
 }
