--- a/wot-frontend/package.json
+++ b/wot-frontend/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "ionicons": "^6.0.0",
+    "node-sass": "^7.0.1",
     "rxjs": "~7.4.0",
+    "sass": "^1.49.9",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
