--- a/wot-frontend/angular.json
+++ b/wot-frontend/angular.json
@@ -35,16 +35,20 @@
                 "output": "webcomponents/"
               },
               {
+                "glob": "**/*.js",
+                "input": "node_modules/ionicons/dist/ionicons",
+                "output": "ionicons/"
+              },
+              {
                 "glob": "**/*.svg",
                 "input": "node_modules/ionicons/dist/ionicons/svg",
-                "output": "./svg"
+                "output": "ionicons/svg"
               }
             ],
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": [
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
